<resources>
    <string name="app_name">AR NATK</string>

    <string name="title_camera">Камера</string>
    <string name="title_collection">Коллеция</string>

    <string name="cd_b_add">add</string>

    <string name="b_add">Добавить</string>
    <string name="cd_logo">logo</string>
    <string name="t_number_1">1</string>
    <string name="b_pon">Понятно</string>
    <string name="t_step_1">Ищи метки по всему колледжу</string>
    <string name="hint_name">Имя</string>
    <string name="t_number_2">2</string>
    <string name="t_step_2">Сканируй найденные метки и добавляй их в коллекцию</string>
    <string name="t_number_3">3</string>
    <string name="t_step_3">Собери всю коллекцию</string>
    <string name="t_input_name">Введите имя</string>
    <string name="fab_ready">Готово</string>
    <string name="cd_ready">ready</string>
    <string name="t_connection_error">Что-то пошло не так</string>
    <string name="t_empty_input_error">Введите имя</string>
    <string name="cd_collection_item">collection item</string>
    <string name="title_records">Рейтинг</string>
    <string name="title_sharp">#</string>
    <string name="title_user_name">Имя пользователя</string>
    <string name="title_score">Количество</string>
    <string name="title_collection_item_info">Информация</string>
    <string name="t_congratulate">Поздравляем!</string>
    <string name="t_all_collection">Вы собрали всю коллекцию</string>
    <string name="cd_all_collection">icon OK</string>
    <string name="cd_item_info">Item Image</string>
    <string name="cd_b_info">Read information</string>
    <string name="b_info">Информация</string>
    <string name="cd_link">Open Wikipedia</string>
    <string name="cd_controller">Controller</string>
    <string name="cd_open_ondoarding">Open on boarding</string>
    <string name="tooltip_open_wiki">Открыть Википедию</string>
    <string name="cd_empty">Empty</string>
    <string name="t_empty_error">Здесть пусто :(</string>
</resources>