<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OnboardActivity"
    android:background="@color/dark_main">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glOnboardTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glOnboardBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

    <ImageView
        android:id="@+id/ivOnboardLogo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/glOnboardTop"
        android:contentDescription="@string/cd_logo" />

    <LinearLayout
        android:id="@+id/rlOnboardSteps"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/ivOnboardLogo"
        app:layout_constraintBottom_toTopOf="@id/fabNext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp">

            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:gravity="center"
                style="@style/tv_number"
                android:text="@string/t_number_1"
                android:textColor="@color/blue_accent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="20sp"
                android:layout_marginEnd="24dp"
                android:gravity="center_vertical"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/t_step_1"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp">

            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:gravity="center"
                style="@style/tv_number"
                android:text="@string/t_number_2"
                android:textColor="@color/green_accent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="24dp"
                android:textSize="20sp"
                android:gravity="center_vertical"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/t_step_2"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:gravity="center"
                style="@style/tv_number"
                android:text="@string/t_number_3"
                android:textColor="@color/purple_accent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="24dp"
                android:textSize="20sp"
                android:gravity="center_vertical"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/t_step_3"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fabNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/fab_main"
        android:text="@string/fab_pon"
        app:layout_constraintBottom_toTopOf="@id/glOnboardBottom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>