<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.collectioninfo.CollectionItemInfoFragment"
    android:background="@color/dark_main">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp">

            <TextView
                android:id="@+id/tvCollectionHeaderInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold_italic"
                android:textSize="28sp"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvCollectionInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/montserrat_regular"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/tvCollectionHeaderInfo" />

            <ImageView
                android:id="@+id/ivImageCollectionInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                app:layout_constraintTop_toBottomOf="@id/tvCollectionInfo"
                android:layout_marginTop="12dp"
                android:contentDescription="@string/cd_item_info" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bOpenWiki"
                style="@style/Button.Link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:contentDescription="@string/tooltip_open_wiki"
                android:text="@string/tooltip_open_wiki"
                app:iconGravity="textEnd"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivImageCollectionInfo" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="70dp"
                app:layout_constraintTop_toBottomOf="@id/bOpenWiki" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bBack"
        style="@style/Button.Main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/cd_ready"
        android:text="@string/b_pon"
        android:layout_marginBottom="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>