<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.auth.AuthActivity"
    android:background="@color/dark_main">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glNameTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glNameBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glNameStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glNameEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <TextView
        android:id="@+id/tvInputName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/t_input_name"
        android:textSize="32sp"
        android:gravity="center"
        app:layout_constraintVertical_bias="0.9"
        app:layout_constraintEnd_toStartOf="@id/glNameEnd"
        app:layout_constraintStart_toEndOf="@id/glNameStart"
        app:layout_constraintTop_toTopOf="@+id/glNameTop"
        app:layout_constraintBottom_toTopOf="@id/tilUserName" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilUserName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:textColorHint="@color/gray_sec"
        app:boxStrokeColor="@color/white"
        app:boxStrokeWidth="1dp"
        app:errorEnabled="true"
        app:errorTextColor="@color/error"
        app:hintTextColor="@color/gray_sec"
        app:layout_constraintBottom_toTopOf="@id/bReady"
        app:layout_constraintEnd_toStartOf="@id/glNameEnd"
        app:layout_constraintStart_toEndOf="@id/glNameStart"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:hint="@string/hint_name"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bReady"
        style="@style/Button.Main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/cd_ready"
        android:text="@string/fab_ready"
        app:layout_constraintBottom_toTopOf="@+id/glNameBottom"
        app:layout_constraintEnd_toStartOf="@id/glNameEnd"
        app:layout_constraintStart_toEndOf="@id/glNameStart" />

    <include
        android:id="@+id/iLoader"
        android:visibility="gone"
        layout="@layout/loader_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>