<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.camera.CameraFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glCameraBottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.98" />

        <ImageView
            android:id="@+id/ivOpenOnBoarding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_info"
            android:padding="12dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/cd_open_ondoarding" />

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/dark_main"
            android:translationZ="-1dp">

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/ArFragment"
                android:name="com.google.ar.sceneform.ux.ArFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:layout="@layout/record_item_layout" />

            <!--record_item_layout добавлен для отображения FCV-->
        </FrameLayout>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/bAdd"
            android:layout_width="0dp"
            android:layout_height="0dp"
            style="@style/Button.Main"
            android:enabled="false"
            android:contentDescription="@string/cd_b_add"
            android:text="@string/b_add"
            app:icon="@drawable/ic_add" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/bInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Button.Main"
            android:enabled="false"
            app:fabSize="normal"
            android:src="@drawable/ic_info"
            android:contentDescription="@string/cd_b_info"
            tools:ignore="MissingConstraints" />

        <androidx.constraintlayout.helper.widget.Flow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/glCameraBottom"
            app:constraint_referenced_ids="bAdd, bInfo"
            app:flow_wrapMode="chain"
            app:flow_horizontalAlign="center"
            android:layout_marginHorizontal="12dp"
            app:flow_verticalGap="12dp"
            app:flow_horizontalGap="12dp" />

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/pbCameraLoader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_progress_bar"
            android:indeterminate="true"
            app:indicatorColor="@color/white"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
        android:id="@+id/incBottomSheet"
        layout="@layout/item_info_bottom_sheet"
        tools:visibility="gone" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>

