<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/dark_main"
    tools:context=".presentation.records.RecordsFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glRecordScreenStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glRecordScreenEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <TextView
        android:id="@+id/tvTableTitlePlace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/gray_sec"
        android:fontFamily="@font/montserrat_light"
        android:textSize="14sp"
        android:text="@string/title_sharp"
        android:layout_marginVertical="12dp"
        app:layout_constraintStart_toEndOf="@id/glRecordScreenStart"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTableTitleUserName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_light"
        android:textSize="14sp"
        android:layout_marginHorizontal="16dp"
        android:maxLines="1"
        android:ellipsize="end"
        android:textColor="@color/gray_sec"
        android:text="@string/title_user_name"
        android:layout_marginVertical="12dp"
        app:layout_constraintStart_toEndOf="@+id/tvTableTitlePlace"
        app:layout_constraintEnd_toStartOf="@id/tvTableTitleUserScore"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTableTitleUserScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:fontFamily="@font/montserrat_light"
        android:textSize="14sp"
        android:textColor="@color/gray_sec"
        android:text="@string/title_score"
        android:layout_marginVertical="12dp"
        app:layout_constraintEnd_toStartOf="@id/glRecordScreenEnd"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/gTableTitles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="tvTableTitlePlace, tvTableTitleUserName, tvTableTitleUserScore" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvUsers"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTableTitleUserScore" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/pbUserLoader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_progress_bar"
        android:indeterminate="true"
        app:indicatorColor="@color/white"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>